--- a/index.html
+++ b/index.html
@@ -5,10 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="/style.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <title>TumiJane Foundation</title>
   </head>
   <body>
+    <header class="header">
+      <a href="#" class="logo">TumiJane <span>Foundation</span></a>
+      <i class='bx bx-menu-alt-left' id = "bx-menu-alt-left"></i>
+      </a>
+      <nav class="navbar">
+         <a href="#home" class = "active">Home</a>
+         <a href="#about">About Us</a>
+         <a href="#education">#####</a>
+         <a href="#experience">Contact Us</a>
+      </nav>
+   </header>
+   <section class="home" id = "home">
+    <div class = "home-content">
+      <h1>Championing Human Rights for a Brighter Tomorrow</h1>
+       <h3>Empowering Voices, <span id="typing">Transforming Lives</span></h3>
+       <p>
+        Our NGO is dedicated to empowering women and children by advocating for their human rights and ensuring their voices are heard. 
+        We strive to create a world where every woman and child can live with dignity, free from discrimination and violence. 
+        Through education, advocacy, and community support, we work tirelessly to transform lives and build a more just and equitable society. 
+       </p>
+       <div class="social-media">
+          <a href = "https://www.linkedin.com/in/boitumelo-t-009b6314a"><i class='bx bxl-linkedin'></i></a>
+          <a href = "https://github.com/Boitumelo29"><i class='bx bxl-github'></i></a>
+       </div>
 
+    </div>
+    <div class="circle">
+       <img src="/images/Cartoonify (3).png" alt="Description of the image">
+    </div>
+ </section>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="/script.js"></script>
