--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         We strive to create a world where every woman and child can live with dignity, free from discrimination and violence. 
         Through education, advocacy, and community support, we work tirelessly to transform lives and build a more just and equitable society. 
        </p>
-       <div class="social-media">
+       <!-- <div class="social-media">
           <a href = "https://www.linkedin.com/in/boitumelo-t-009b6314a"><i class='bx bxl-linkedin'></i></a>
           <a href = "https://github.com/Boitumelo29"><i class='bx bxl-github'></i></a>
        </div>
@@ -37,8 +37,22 @@
     </div>
     <div class="circle">
        <img src="/images/Cartoonify (3).png" alt="Description of the image">
-    </div>
+    </div> -->
  </section>
+ <section class="about" id = "about">
+  <div class="about-img">
+     <img src="/images/Cartoonify (4).png" alt="">
+  </div>
+  <div class="about-content">
+     <h2 class = "main-heading">About <span class = "title-line">Us</span></h2>
+     <h3>A bit of our background</h3>
+     <p> 
+      TumiJane Foundation is a non-profit company Registration Number: K2022292 founded by Boitumelo T. It was founded in 2020 November. 
+      Here at TumiJane Foundation, we are driven by a single goal; to do our part in making the world a better place for all. 
+      Our decision making process is informed by comprehensive empirical studies and high quality data evaluation. We strive to build productive relationships and make a positive impact with all of our pursuits. </p>
+        <a href="#experience" class = "btn">Read More</a>
+  </div>
+</section>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="/script.js"></script>
