--- a/index.html
+++ b/index.html
@@ -53,6 +53,35 @@
         <a href="#experience" class = "btn">Read More</a>
   </div>
 </section>
+<section class="experience" id ="experience">
+  <h2 class = "main-heading">Experience</h2>
+  <div class="experience-container">
+     <div class = "experience-box">
+        <i class='bx bx-code-alt'></i>
+        <h3> Career </h3>
+        <p>Career Background</p>
+        <a href="/AboutPages/career/index.html" class = "btn">Read More</a>
+     </div>
+     <div class = "experience-box">
+        <i class='bx bx-laptop' ></i>
+        <h3> Academics</h3>
+        <p> Academic Background</p>
+        <a href="/AboutPages/academics/index.html" class = "btn">Read More</a>
+     </div>
+     <div class = "experience-box">
+        <i class='bx bxs-group'></i>
+        <h3> Extra Murals</h3>
+        <p> Additional Information</p>
+        <a href="/AboutPages/extra murals/index.html" class = "btn">Read More</a>
+     </div>
+  </div>
+</section>
+<footer class="footer">
+  <div class="social">
+     <a href = ""><i class="bi bi-telephone-fill"></i></a>
+        <a href = ""><i class="bi bi-envelope-heart-fill"></i></a>
+  </div>
+</footer>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="/script.js"></script>
